--- a/exercise_solution.ipynb
+++ b/exercise_solution.ipynb
@@ -261,7 +261,7 @@
    "outputs": [],
    "source": [
     "# split X and y into training and testing sets\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
