--- a/tutorial_with_output.ipynb
+++ b/tutorial_with_output.ipynb
@@ -1049,7 +1049,7 @@
    ],
    "source": [
     "# split X and y into training and testing sets\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
     "print(X_train.shape)\n",
     "print(X_test.shape)\n",
